--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="center">
             <ul class="navbar">
             <li><a href="#">Home</a></li>
-            <li><a href="index.html" target="_blank">Blogs</a></li>
+            <li><a href="Blog_page.html" target="_blank">Blogs</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
             </ul>
