--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="left">
-            <a href="#"><img src="https://media.licdn.com/dms/image/C4D0BAQHqmLjBwUcYeg/company-logo_200_200/0/1674211673459?e=1704326400&v=beta&t=BKrdDfk88rI2BR_FgrgJTjKMffQQOFQiDKfUDqa9lIw" alt="Reload" onclick="window.open('Blog.html')"></a>
+            <a href="#"><img src="https://media.licdn.com/dms/image/C4D0BAQHqmLjBwUcYeg/company-logo_200_200/0/1674211673459?e=1704326400&v=beta&t=BKrdDfk88rI2BR_FgrgJTjKMffQQOFQiDKfUDqa9lIw" alt="Reload" onclick="window.open('index.html')"></a>
         </div>
 
         <div class="center">
